[package]
name = "stlslicer"
version = "0.1.0"
authors = ["sunil bhandari <sunil.pd.bhandari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
num_cpus = "1.13.0"
rustc-hash = "1.1.0"
fltk = { version = "1.1.3" }

[profile.release]
debug = true